--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && cp -f pcb.glb dist/pcb.glb",
     "preview": "vite preview",
     "lint": "eslint . --ext ts,js --report-unused-disable-directives --max-warnings 0",
     "type-check": "tsc --noEmit"
