--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -14,3 +14,4 @@ board = esp32-s3-devkitc-1
 framework = arduino
 build_flags = -DARDUINO_USB_CDC_ON_BOOT=1
 lib_deps = seeed-studio/Seeed Arduino LSM6DS3
+           h2zero/NimBLE-Arduino
