--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 build_flags = -DARDUINO_USB_CDC_ON_BOOT=1 -Wall -Wextra -Werror -Ofast
 lib_deps = seeed-studio/Seeed Arduino LSM6DS3
            h2zero/NimBLE-Arduino
+monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
